[package]
name = "fenwick-bit-tree"
version = "0.1.1"
authors = ["Ilia Batii"]
edition = "2021"
include = ["src/*.rs", "Cargo.toml"]
rust-version = "1.76.0"
license = "MIT OR Apache-2.0"
description = "Slighly over-engineered FenwickTree implmentation."
repository = "https://github.com/baitcode/fenwick-bit-tree"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
benchmarks = []

[dependencies]
rand = "0.8.5"

[dev-dependencies]
pretty_assertions = "1.4.0"
